# sphinx-sbom-report

./: README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
example/: README.md
src/sphinx-sbom-report/: __init__.py  sbom.py
src/sphinx_sbom_report/: helloworld.py
